--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -126,8 +126,8 @@
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <TextField alignment="CENTER" layoutX="14.0" layoutY="59.0" maxWidth="866.0" prefHeight="27.0" prefWidth="866.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
-                        <Button layoutX="897.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
+                        <TextField fx:id="buscarPesquisarUsuarioTextField" alignment="CENTER" layoutX="14.0" layoutY="59.0" maxWidth="866.0" prefHeight="27.0" prefWidth="866.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
+                        <Button fx:id="pesquisarUsuarioAction" layoutX="897.0" layoutY="60.0" mnemonicParsing="false" onAction="#pesquisarUsuario" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="usuarioPesquisadoAnchorPane" layoutX="14.0" layoutY="172.0" prefHeight="482.0" prefWidth="978.0">
@@ -190,7 +190,7 @@
                      <children>
                         <GridPane hgap="30.0" layoutX="4.0" layoutY="-174.0" prefHeight="611.0" prefWidth="1009.0" style="-fx-background-color: white;" vgap="10.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="-174.0">
                            <children>
-                              <TextField maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
+                              <TextField fx:id="nomeCadastrarUsuarioTextField" maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -250,10 +250,10 @@
                                     <Insets />
                                  </GridPane.margin>
                               </Label>
-                              <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <DatePicker minWidth="-Infinity" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <ComboBox prefWidth="150.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="rgCadastrarUsuarioTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="cpfCadastrarUsuarioTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <DatePicker fx:id="nascimentoCadastrarUsuarioTextField" minWidth="-Infinity" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <ComboBox fx:id="sexoCadastrarUsuarioTextField" prefWidth="150.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Label layoutX="20.0" layoutY="512.0" text="Comorbidades" textFill="#3f2863" GridPane.rowIndex="5">
                                  <font>
                                     <Font name="Arial Bold" size="24.0" />
@@ -262,8 +262,8 @@
                                     <Insets left="200.0" />
                                  </padding>
                               </Label>
-                              <TextArea maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="80.0" prefWidth="500.0" style="-fx-border-color: #3f2863; -fx-background-color: white; -fx-background-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                              <TextArea fx:id="comorbidadesCadastrarUsuarioTextArea" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="80.0" prefWidth="500.0" style="-fx-border-color: #3f2863; -fx-background-color: white; -fx-background-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Button fx:id="cadastrarUsuarioAction" mnemonicParsing="false" onAction="#cadastrarUsuario" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                  <font>
                                     <Font name="Arial Bold" size="18.0" />
                                  </font>
@@ -316,7 +316,7 @@
                   <AnchorPane layoutX="14.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="1034.0" />
                   <GridPane hgap="30.0" layoutX="9.0" layoutY="79.0" prefHeight="587.0" prefWidth="1002.0" style="-fx-background-color: white;" vgap="10.0" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="79.0">
                      <children>
-                        <TextField maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
+                        <TextField fx:id="nomeCadastrarProfissionalTextField" maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -354,9 +354,9 @@
                               <Insets />
                            </GridPane.margin>
                         </Label>
-                        <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TextField fx:id="enderecoCadastrarProfissionalTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="idCadastrarProfissionalTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button fx:id="cadastrarProfissionalAction" mnemonicParsing="false" onAction="#cadastrarProfissional" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
@@ -394,7 +394,7 @@
                   </AnchorPane>
                   <GridPane hgap="30.0" layoutY="76.0" prefHeight="587.0" prefWidth="1002.0" style="-fx-background-color: white;" vgap="10.0">
                      <children>
-                        <TextField fx:id="CadastrarVacinaTipoTextField" maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
+                        <TextField fx:id="tipoCadastrarVacinaTextField" maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -432,9 +432,9 @@
                               <Insets />
                            </GridPane.margin>
                         </Label>
-                        <TextField fx:id="CadastrarVacinaLoteTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="509.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="CadastrarVacinaMarcaTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="501.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <TextField fx:id="loteCadastrarVacinaTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="509.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="marcaCadastrarVacinaTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="501.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button fx:id="cadastrarVacinaAction" mnemonicParsing="false" onAction="#cadastrarVacina" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
@@ -442,7 +442,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Label text="Dose" textFill="#3f2863" GridPane.rowIndex="3">
+                        <Label text="Data" textFill="#3f2863" GridPane.rowIndex="3">
                            <font>
                               <Font name="Arial Bold" size="24.0" />
                            </font>
@@ -450,7 +450,7 @@
                               <Insets left="200.0" right="60.0" />
                            </padding>
                         </Label>
-                        <TextField fx:id="CadastrarVacinaDoseTextField" maxWidth="-Infinity" prefHeight="27.0" prefWidth="514.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="dataCadastrarVacinaTextField" maxWidth="-Infinity" prefHeight="27.0" prefWidth="514.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                      <columnConstraints>
                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="-Infinity" prefWidth="400.0" />
